fixed schedule spacing

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -57,6 +57,9 @@ body {
   justify-content: center;
 }
 
+.table td:first-child{
+  width: 100px;
+}
 
 /*CALENDAR PAGE*/
 
